some fixes as basis for next refactoring